<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_image_view"
    android:background="@drawable/background"
    tools:context=".activity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battlefield"
                android:textColor="#f9f9f9"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/health_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:text="@string/monster_hp"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/twenty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/health_bar"
                android:text="@string/HP20"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/your_health_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/twenty"
                android:text="@string/player_hp"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/your_health_bar"
                android:text="@string/HP10"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/Coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ten"
                android:text="@string/coin"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/Coin_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Coin"
                android:text="@string/Coinzero"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
            <ImageView
                android:layout_width="300dp"
                android:layout_height="390dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/dragon"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="11dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/sword"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/sword" />
                    <Button
                        android:id="@+id/attack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/attack"
                        android:textColor="#0000ff"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="11dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/shield" />

                    <Button
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/company"
                        android:textColor="#0000ff"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="11dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:src="@drawable/clover" />

                    <Button
                        android:id="@+id/shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/shop"
                        android:textColor="#0000ff"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="11dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/book" />

                    <Button
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/setting"
                        android:textColor="#0000ff"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>
</ScrollView>
